# ProyectoTFG

./: .gitignore  README.md  install.sh
Cloud/Integrated/: .dockerignore  Dockerfile  Example.env  README.md  compose.yaml  install.sh  package-lock.json  package.json
Cloud/Integrated/db/: Dockerfile
Cloud/Integrated/prisma/: schema.prisma
Cloud/Integrated/src/: password.ts  server.ts
Cloud/Integrated/src/__tests__/: tests.ts
Cloud/Spikes/SimpleCRBackend/: Dockerfile  compose.yaml  package-lock.json  package.json  tsconfig.json
Cloud/Spikes/SimpleCRBackend/db/: Dockerfile  schema.sql
Cloud/Spikes/SimpleCRBackend/prisma/: schema.prisma
Cloud/Spikes/SimpleCRBackend/src/: server.ts
Embedded/Integrated/FOSSPsychotechnicalExamination_embedded/: CMakeLists.txt  LICENSE.md  README.md  install.sh
Embedded/Integrated/FOSSPsychotechnicalExamination_embedded/components/examinations/: CMakeLists.txt  first_examination.c  second_examination.c
Embedded/Integrated/FOSSPsychotechnicalExamination_embedded/components/examinations/include/: first_examination.h  second_examination.h
Embedded/Integrated/FOSSPsychotechnicalExamination_embedded/components/examinations/test/: test_first_examination.c
Embedded/Integrated/FOSSPsychotechnicalExamination_embedded/components/utils/: CMakeLists.txt  uart.c
Embedded/Integrated/FOSSPsychotechnicalExamination_embedded/components/utils/include/: uart.h
Embedded/Integrated/FOSSPsychotechnicalExamination_embedded/components/utils/test/: CMakeLists.txt  test_uart.c
Embedded/Integrated/FOSSPsychotechnicalExamination_embedded/main/: CMakeLists.txt  main.c
Embedded/Integrated/FOSSPsychotechnicalExamination_embedded/test/: CMakeLists.txt
Embedded/Integrated/FOSSPsychotechnicalExamination_embedded/test/main/: CMakeLists.txt  unit_tests.c
Embedded/Spikes/ButtonReadProgram/ButtonRead/: CMakeLists.txt
Embedded/Spikes/ButtonReadProgram/ButtonRead/main/: main.c
Embedded/Spikes/InterruptChangeBySerial/: CMakeLists.txt
Embedded/Spikes/InterruptChangeBySerial/main/: main.c
Embedded/Spikes/InterruptChangeBySerial/src/: main.c
Embedded/Spikes/ReadingFromMultiplePotentiometers/: CMakeLists.txt
Embedded/Spikes/ReadingFromMultiplePotentiometers/main/: main.c
Embedded/Spikes/ReadingFromPotentiometer/: CMakeLists.txt
Embedded/Spikes/ReadingFromPotentiometer/main/: main.c
Embedded/Spikes/UserSimulator/: CMakeLists.txt
Embedded/Spikes/UserSimulator/main/: main.c
Embedded/Spikes/UserSimulator/src/: main.c
Memoria/: README.md  install.sh  main.tex  references.bib
Memoria/media/: video_examinaciones.mkv
Memoria/template/: LICENSE
SanityTests/BasicTestSuite/: CMakeLists.txt
SanityTests/BasicTestSuite/src/: CMakeLists.txt  class_with_main.cpp
SanityTests/BasicTestSuite/tests/: CMakeLists.txt  test.cpp
SanityTests/blink/main/: blink_example_main.c
SanityTests/gtk_basic_test/: commandtocompile.txt
SanityTests/hello_world_cpp/: helloworld  helloworld.cpp
SanityTests/libcurl_basic_cpp_test/: example
SanityTests/libcurl_basic_test/: example  example.c
SanityTests/sfml_basic_test/AquariumCPP/: CMakeLists.txt
SanityTests/sfml_basic_test/AquariumCPP/src/: main.cpp
SystemSoftware/Integrated/: CMakeLists.txt  README.md  install.sh  run.sh
SystemSoftware/Integrated/src/: CMakeLists.txt
SystemSoftware/Integrated/src/examinations/: CMakeLists.txt  first_examination.cpp  second_examination.cpp
SystemSoftware/Integrated/src/examinations/include/first_examination/: definitions_first_examination.hpp  first_examination.hpp
SystemSoftware/Integrated/src/examinations/include/second_examination/: definitions_second_examination.hpp  second_examination.hpp
SystemSoftware/Integrated/src/gui/: CMakeLists.txt  gui.c
SystemSoftware/Integrated/src/utils/serial/: CMakeLists.txt  serial.cpp
SystemSoftware/Integrated/src/utils/serial/include/: serial.hpp
SystemSoftware/Integrated/test/src/: CMakeLists.txt  first_examination_test.cpp  second_examination_test.cpp  serial_test.cpp
SystemSoftware/Spikes/FirstIntegration/: CMakeLists.txt
SystemSoftware/Spikes/FirstIntegration/include/: serial.hpp
SystemSoftware/Spikes/FirstIntegration/src/: main.cpp  serial.cpp
SystemSoftware/Spikes/FirstPsychologicalTest/src/: main.cpp
SystemSoftware/Spikes/GUIMenu/: main
SystemSoftware/Spikes/ResultClientTestI/: main  main.cpp
SystemSoftware/Spikes/SecondIntegration/: CMakeLists.txt
SystemSoftware/Spikes/SecondIntegration/include/: serial.hpp
SystemSoftware/Spikes/SecondIntegration/src/examinations/: first_test.cpp  second_test.cpp
SystemSoftware/Spikes/SecondIntegration/src/gui/: gui.c
SystemSoftware/Spikes/SecondIntegration/src/utils/: serial.cpp
SystemSoftware/Spikes/SecondPsychologicalTest/: CMakeLists.txt  codigo_descartado.txt
SystemSoftware/Spikes/SecondPsychologicalTest/src/: main.cpp
SystemSoftware/Spikes/SerialReceptionOverCPP/: main  main.cpp
SystemSoftware/Spikes/SerialSendingOverCPP/: main  main.cpp
Web/Integrated/: LICENSE.md  README.md  install.sh  package-lock.json  package.json  run.sh
Web/Integrated/src/: client.ts  utils.ts
Web/Integrated/src/__tests__/: tests.ts
Web/Spikes/DataReceptionAndTemplating/: package.json
Web/Spikes/FrontendForCloud/: package-lock.json  package.json  tsconfig.json
Web/Spikes/FrontendForCloud/src/: client.ts
Web/Spikes/GenerationOfCryptographyAndDataSending/: package-lock.json  package.json
Web/Spikes/GenerationOfCryptographyAndDataSending/src/: encryptingdecryptingtest.ts
Web/Spikes/ResultServerTestI/: Dockerfile  package-lock.json  package.json  tsconfig.json
Web/Spikes/ResultServerTestI/src/: main.ts
