include_directories(include)
find_package(PkgConfig REQUIRED)
pkg_check_modules(GTK4 REQUIRED IMPORTED_TARGET gtk4)
include_directories(${GTK4_INCLUDE_DIRS})
link_directories(${GTK4_LIBRARY_DIRS})
add_executable(gui gui.c)
add_definitions(${GTK4_CFLAGS_OTHER})
target_link_libraries(gui ${GTK4_LIBRARIES})